fix(content): Email title was not visible

--- a/src/styles/components/content.styl
+++ b/src/styles/components/content.styl
@@ -41,3 +41,7 @@
   // Improve margins of mail content
   .ii
     margin 45px 45px 0 0
+
+//
+.ha > .hP
+  color $gray !important
